--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -194,72 +194,88 @@ aggregation, segments and months with zero measured exposure are identified. To 
 The resulting monthly panels at the segment and junction levels serve as inputs to all risk scoring and routing analyses.\footnote{Implementation details and hyperparameters at \url{https://github.com/ytobiaz/data_literacy}.}
 
 \subsection{Methods}\label{sec:methods}
-\paragraph{Empirical Bayes exposure-normalized risk.}\todo{change this paragraph to relative-risk EB}
-For each street segment $s$ and month $t$, let $A_{s,t}$ denote the number of police-recorded bicycle crashes and $E_{s,t}$ the measured cyclist exposure. We model crash counts as
+\paragraph{Empirical Bayes relative risk.}
+For each street segment $s$ and month $t$, let $A_{s,t}$ denote the number of police-recorded bicycle crashes and $E_{s,t}$ the measured cyclist exposure. We assume that, within a given month, crash incidence is proportional to exposure under a ``no special risk'' baseline, yielding the expected number of crashes
 \[
-A_{s,t}\mid \lambda_{s,t} \sim \text{Poisson}(E_{s,t}\lambda_{s,t}),
+\widehat{A}_{s,t}
+= A_{t}\,\frac{E_{s,t}}{E_{t}},
+\qquad
+A_{t}=\sum_{s} A_{s,t},\ \ E_{t}=\sum_{s} E_{s,t}.
 \]
-where $\lambda_{s,t}$ is the latent crash rate per unit exposure. To stabilize estimation under low or zero exposure, we adopt an Empirical Bayes Poisson--Gamma model with prior
-\[
-\lambda_{s,t} \sim \text{Gamma}(\alpha,\beta),
-\]
-where $\alpha$ and $\beta$ are estimated from the marginal distribution of segment-level counts and exposures within each month. The resulting posterior mean,
-\[
-r_{s,t}
-= \mathbb{E}[\lambda_{s,t}\mid A_{s,t},E_{s,t}]
-= \frac{A_{s,t}+\alpha}{E_{s,t}+\beta},
-\]
-serves as our exposure-normalized segment risk. This estimator shrinks unstable rates toward the network-wide mean and remains well-defined for $E_{s,t}=0$, in which case $r_{s,t}$ equals
-the prior mean $\alpha/\beta$.
 
-To capture the concentration of crashes near intersections, we also estimate junction risk. A junction is any node with degree $\ge 3$; crashes within a fixed radius of its centroid are 
-assigned to that junction. Because a traversal typically contributes exposure to two incident segments (entering and exiting), we approximate junction exposure by a half-sum of incident segment exposures,
+Although crashes and exposure are aggregated at monthly resolution in preprocessing, sparse observations motivate estimating relative risk at yearly resolution. For each year $y$ comprising months $\mathcal{T}(y)$, we pool monthly aggregates to yearly totals
+\[
+A_{s,y}=\sum_{t\in\mathcal{T}(y)} A_{s,t},
+\qquad
+E_{s,y}=\sum_{t\in\mathcal{T}(y)} E_{s,t},
+\]
+and define $A_y=\sum_s A_{s,y}$ and $E_y=\sum_s E_{s,y}$. The corresponding baseline expectation is
+\[
+\widehat{A}_{s,y}
+= A_y\,\frac{E_{s,y}}{E_y}.
+\]
+
+To obtain stable estimates under sparse observations, we introduce a latent relative-risk multiplier $\theta_{s,y}$ and model
+\[
+\begin{aligned}
+A_{s,y} \mid \theta_{s,y} &\sim \text{Poisson}(\widehat{A}_{s,y}\,\theta_{s,y}), \\
+\theta_{s,y} &\sim \text{Gamma}(\alpha,\alpha),
+\end{aligned}
+\]
+where the Gamma distribution is parameterized in shape--rate form, enforcing a unit prior mean
+$\mathbb{E}[\theta_{s,y}]=1$. The hyperparameter $\alpha$ is estimated via empirical Bayes by maximizing the marginal likelihood pooled across all segments and years. By conjugacy, the posterior mean
+\[
+r_{s,y}
+= \mathbb{E}[\theta_{s,y}\mid A_{s,y},\widehat{A}_{s,y}]
+= \frac{A_{s,y}+\alpha}{\widehat{A}_{s,y}+\alpha}
+\]
+serves as our smoothed segment-level relative risk. This estimator shrinks extreme values toward $1$, with stronger shrinkage for segments with low expected crash counts.
+
+To capture the concentration of crashes near intersections, we also estimate junction-level relative risk. A junction is defined as any network node with degree $\ge 3$; crashes within a fixed radius of its centroid are assigned to that junction. Because a traversal typically contributes exposure to two incident segments (entering and exiting), we approximate junction exposure by a half-sum of incident segment exposures,
 \begin{equation}
 \label{eq:half-sum}
-E_{v,t}=\tfrac{1}{2}\sum_{s\in\mathcal{I}(v)}E_{s,t},
+E_{v,y}=\tfrac{1}{2}\sum_{s\in\mathcal{I}(v)}E_{s,y},
 \end{equation}
-which avoids double-counting. While this specific halving correction is, to our knowledge, not standard, aggregating exposure over incident links is common when turning movements are unavailable~\citep{hakkert2002uses,WANG2020105838}. 
-Junction risk $r_{v,t}$ is defined analogously using the same Empirical Bayes estimator. We estimate all risks at monthly resolution to separate temporal regimes and enable conditioning on context (e.g., time of day, weather).
+which avoids double-counting. While this specific halving correction is not standard, aggregating exposure over incident links is common when turning movements are unavailable~\citep{hakkert2002uses,WANG2020105838}. The expected number of junction crashes is defined as $\widehat{A}_{v,y}=A_y E_{v,y}/E_y$, and junction relative risk $r_{v,y}$ is estimated using the same Empirical Bayes formulation and hyperparameters as for segments. All risks are estimated independently by year.
 
 \paragraph{Routing graph.}
-For each month $t$, we build an undirected graph $G_t=(V_t,E_t)$ from the street network: nodes are segment endpoints and edges are street segments with length $\ell_e$ and segment risk $r_{e,t}$. 
-Junction identifiers and risks are mapped to nodes via spatial snapping in a projected coordinate system, yielding a month-specific, risk-annotated network.
+For each year $y$, we build an undirected graph $G_y=(V_y,E_y)$ from the street network: nodes represent segment endpoints and edges represent street segments with length $\ell_e$. Each graph edge $e$ corresponds to a street segment $s$ and inherits its estimated yearly risk, denoted $r_{e,y}=r_{s,y}$. Junction identifiers and risks are mapped to nodes via spatial snapping in a projected coordinate system, yielding a year-specific, risk-annotated network.
 
 \paragraph{Safety-aware routing.}
-We compare shortest-distance routes with alternatives that reduce estimated crash risk under a bounded detour. For month $t$, route length is
+We compare shortest-distance routes with alternatives that reduce estimated crash risk under a bounded detour. For year $y$, the length of a route $P$ is
 \[
 L(P)=\sum_{e\in P}\ell_e.
 \]
-To account for segment- and junction-level exposure, the risk contribution of edge $e=(u,v)$ is
+To account for both segment- and junction-level exposure, the risk contribution of edge $e=(u,v)$ is defined as
 \[
-\rho_{e,t}=r_{e,t}+\eta\,\frac{r_{u,t}+r_{v,t}}{2},
+\rho_{e,y}=r_{e,y}+\eta\,\frac{r_{u,y}+r_{v,y}}{2},
 \]
-where $r_{u,t}$ and $r_{v,t}$ are junction risks (zero for non-junction nodes) and $\eta\ge 0$ weights junction risk. We interpret these exposure-normalized rates as an \emph{additive surrogate} 
-for cumulative route risk, not probabilities. Given an origin–destination pair, the baseline route $P_{\text{dist}}$ minimizes $L(P)$. The safety-aware route solves
+where $r_{u,y}$ and $r_{v,y}$ are junction risks (set to zero for non-junction nodes) and $\eta\ge 0$ weights the contribution of junction risk. We interpret these relative-risk weights as an \emph{additive surrogate} for cumulative route risk, not as probabilities.
+
+Given an origin--destination pair, the baseline route $P_{\text{dist}}$ minimizes $L(P)$. The safety-aware route solves
 \begin{equation}
 \label{eq:safe-routing}
 \begin{aligned}
-P_{\text{safe}}=\arg\min_{P}\ & R(P)=\sum_{e\in P}\rho_{e,t} \\
+P_{\text{safe}}=\arg\min_{P}\ & R(P)=\sum_{e\in P}\rho_{e,y} \\
 \text{s.t.}\ & L(P)\le (1+\varepsilon)\,L(P_{\text{dist}}),
 \end{aligned}
 \end{equation}
-where $\varepsilon$ is the allowable relative detour. We approximate this constrained problem via a weighted-sum sweep: for $\lambda\in\Lambda$,
+where $\varepsilon$ is the allowable relative detour. We approximate this constrained problem using a weighted-sum sweep: for $\lambda\in\Lambda$,
 \[
-P(\lambda)=\arg\min_{P}\sum_{e\in P}\bigl(\rho_{e,t}+\lambda\,\ell_e\bigr),
+P(\lambda)=\arg\min_{P}\sum_{e\in P}\bigl(\rho_{e,y}+\lambda\,\ell_e\bigr),
 \]
-then select among feasible candidates (respecting the detour) the route with minimal $R(P)$, breaking ties by shorter $L(P)$ (using Dijkstra’s algorithm). Routing is performed independently by month.
+then select among feasible candidates the route with minimal $R(P)$, breaking ties by shorter $L(P)$. Shortest paths are computed using Dijkstra’s algorithm. Routing is performed independently by year.
 
 \paragraph{Evaluation metrics.}
-For each pair, we report the relative length increase
+For each origin--destination pair, we report the relative length increase
 \[
 \Delta_L=\frac{L(P_{\text{safe}})-L(P_{\text{dist}})}{L(P_{\text{dist}})}
 \]
 and the relative risk reduction
 \[
-\Delta_R=\frac{R(P_{\text{dist}})-R(P_{\text{safe}})}{R(P_{\text{dist}})},
+\Delta_R=\frac{R(P_{\text{dist}})-R(P_{\text{safe}})}{R(P_{\text{dist}})}.
 \]
-with $R(P)=\sum_{e\in P}\rho_{e,t}$. Pairs with $R(P_{\text{dist}})=0$ are excluded from $\Delta_R$ (undefined denominator). These metrics quantify how limited detours trade distance for reductions in exposure-normalized crash risk.
-
+Pairs with $R(P_{\text{dist}})=0$ are excluded from $\Delta_R$ due to an undefined denominator. These metrics quantify how bounded detours trade distance for reductions in relative crash risk.
 
 % How to make a figure
 % \begin{figure}[ht]
