--- a/report/report_template.tex
+++ b/report/report_template.tex
@@ -84,27 +84,27 @@
 \icmlsetsymbol{equal}{*}
 
 \begin{icmlauthorlist}
-\icmlauthor{Eric Berger}{equal,first}
-\icmlauthor{Edward Eichhorn}{equal,second}
-\icmlauthor{Liaisan Faidrakhmanova}{equal,third}
-\icmlauthor{Luise Grasl}{equal,fourth}
-\icmlauthor{Tobias Schnarr}{equal,fith}
+\icmlauthor{Eric Berger}{equal}
+\icmlauthor{Edward Eichhorn}{equal}
+\icmlauthor{Liaisan Faidrakhmanova}{equal}
+\icmlauthor{Luise Grasl}{equal}
+\icmlauthor{Tobias Schnarr}{equal}
 \end{icmlauthorlist}
 
 % fill in your matrikelnummer, email address, degree, for each group member
-\icmlaffiliation{first}{Matrikelnummer 7064584, MSc Machine Learning}
-\icmlaffiliation{second}{Matrikelnummer 12345678, MSc Quantitative Data Science}
-\icmlaffiliation{third}{Matrikelnummer 7320172, MSc Quantitative Data Science}
-\icmlaffiliation{fourth}{Matrikelnummer 7329274, MSc Quantitative Data Science}
-\icmlaffiliation{fith}{Matrikelnummer 7304640, MSc Quantitative Data Science}
+% \icmlaffiliation{first}{Matrikelnummer 7064584, MSc Machine Learning}
+% \icmlaffiliation{second}{Matrikelnummer 12345678, MSc Quantitative Data Science}
+% \icmlaffiliation{third}{Matrikelnummer 7320172, MSc Quantitative Data Science}
+% \icmlaffiliation{fourth}{Matrikelnummer 7329274, MSc Quantitative Data Science}
+% \icmlaffiliation{fith}{Matrikelnummer 7304640, MSc Quantitative Data Science}
 
 % put your email addresses here. You can use initials to save space, 
 % e.g. if you are called Max Mustermann, you can use \icmlcorrespondingauthor{MM}{max.mustermann@uni-tuebingen.de}
 % DO USE YOUR UNIVERSITY EMAIL ADDRESS!
-\icmlcorrespondingauthor{EB}{eric.berger@student.uni-tuebingen.de} 
-\icmlcorrespondingauthor{EE}{first2.last2@uni-tuebingen.de}
-\icmlcorrespondingauthor{LF}{liaisan.faidrakhmanova@student.uni-tuebingen.de}
-\icmlcorrespondingauthor{LG}{luise.grasl@student.uni-tuebingen.de}
+% \icmlcorrespondingauthor{EB}{eric.berger@student.uni-tuebingen.de} 
+% \icmlcorrespondingauthor{EE}{first2.last2@uni-tuebingen.de}
+% \icmlcorrespondingauthor{LF}{liaisan.faidrakhmanova@student.uni-tuebingen.de}
+% \icmlcorrespondingauthor{LG}{luise.grasl@student.uni-tuebingen.de}
 \icmlcorrespondingauthor{TS}{tobias-marco.schnarr@student.uni-tuebingen.de}
 
 % You may provide any keywords that you
@@ -127,13 +127,10 @@
 \printAffiliationsAndNotice{\icmlEqualContribution} % otherwise use the standard text.
 
 \begin{abstract}
-We investigated bicycle crash risk on Berlin’s urban street network, addressing a key limitation of many safety analyses: raw crash counts conflate danger with demand 
-and thus fail to distinguish intrinsically risky locations from high-use roads. We combined police-recorded crashes from the German \emph{Unfallatlas} with a city-wide 
-dataset of measured bicycle volumes to compute exposure-normalized risk at the street-segment level. Motivated by the empirical concentration of crashes at 
-intersections, we also derived risk estimates for network junctions. Risk was estimated at monthly resolution and could be conditioned on contextual factors (e.g., time 
-of day and weather) to capture temporal variability. We then aggregated segment- and junction-level risk to score arbitrary routes, enabling comparisons that trade off 
-estimated crash risk against convenience criteria such as distance or travel time. The result is a reproducible framework for exposure-controlled, context-aware 
-bicycle safety analysis and safety-informed routing on urban street networks.\todo{rewrite/edit, when we have final results}
+We investigate bicycle crash risk on Berlin’s urban street network, addressing a key limitation of many safety analyses: raw crash counts conflate danger with demand and fail to distinguish 
+intrinsically risky locations from high-use roads. We combine police-reported crashes with a city-wide dataset of measured bicycle volumes to compute exposure-adjusted risk at the street-segment 
+and junction levels. Risk estimates, available at monthly resolution, can be conditioned on contextual factors (e.g., time of day, weather) to capture temporal variation. Aggregating risk to 
+arbitrary routes enables comparisons that trade off safety against convenience. The result is a reproducible framework for context-aware, exposure-controlled bicycle safety analysis and routing.\todo{rewrite/edit, when we have final results}
 \end{abstract}
 
 \section{Introduction}\label{sec:intro}
@@ -141,7 +138,7 @@ bicycle safety analysis and safety-informed routing on urban street networks.\to
   \centering
   \includegraphics{figs/map_3_panels.pdf}
   \caption{\textbf{Safety-aware routing pipeline for the Berlin cycling network.}
-  Panels (a–c) show an example month (June 2021) and are zoomed in for readability; see Section~\ref{sec:methods} for formal definitions and notation.
+  Panels (a–c) show an example month (June 2021) and are zoomed in for readability; see \cref{sec:methods} for formal definitions and notation.
   \textbf{(a):} police-recorded bicycle crashes ({\color{TUorange}points}) and street segments with measured cyclist exposure ({\color{TUgray}lines}, used as the base network in all panels).
   \textbf{(b):} monthly segment risk (accidents per 10{,}000 trips); high-risk segments in {\color{TUred}red} are the top 90th percentile of \(r_{s,t}\) in the displayed month. {\color{TUdark}Circles} mark junctions (degree $\ge 3$), for which we also estimate junction risk from exposure aggregated over incident segments.
   \textbf{(c):} shortest path ({\color{TUblue}blue}) versus a safer alternative ({\color{TUgreen}green}) chosen to reduce route risk under a distance-detour constraint. {\color{TUocre}Filled circle} and {\color{TUocre}cross} denote origin and destination, respectively; {\color{TUdark}circles} show junctions for reference.
@@ -157,14 +154,11 @@ police-recorded crashes from the German Unfallatlas (Berlin subset)~\citep{Unfal
 We compute exposure-adjusted relative risk for individual street segments and, motivated by the concentration of crashes at intersections, derive junction-level risk by aggregating volumes 
 from adjoining segments. Risk is estimated at monthly resolution and can be conditioned on contextual factors such as time of day and weather to capture temporal variability. We then aggregate 
 segment- and junction-level expected crash costs to evaluate arbitrary routes and compare alternatives that reduce estimated risk while maintaining comparable convenience in terms of distance 
-or travel time, see Figure~\ref{fig:visual_app}. We address the question: how can exposure-adjusted relative crash risk be estimated from measured bicycle volumes and integrated into context-aware
+or travel time, see \cref{fig:visual_app}. We address the question: how can exposure-adjusted relative crash risk be estimated from measured bicycle volumes and integrated into context-aware
 routing? Our work makes the following contributions: (i) a reproducible pipeline for estimating exposure-adjusted relative crash risk at street and junction levels from measured cyclist volumes, 
 with support for context-conditional analysis; and (ii) a route-scoring method that integrates network-level risk into safety-aware routing under convenience constraints.
 
-The paper is organized as follows: we review related work in Section~\ref{sec:relatedw}, describe the data and methods in Section~\ref{sec:data_and_methods}, present the 
-results in Section~\ref{sec:results}, and discuss and conclude in Section~\ref{sec:conclusion}.
-
-\section{Related Work}\label{sec:relatedw}
+\paragraph{Related Work.}
 To avoid conflating danger with demand, prior work normalizes bicycle crashes by cyclist exposure~\citep{luecken2018}. City-scale studies show that exposure-normalized risk yields more 
 informative spatial patterns than raw counts and that finer temporal resolution improves inference, while noting persistent under-reporting in police records~\citep{Uijtdewilligen01092024}. 
 A central challenge is obtaining reliable exposure: some approaches extrapolate city-wide volumes from sparse counters using learning-based models and multi-source features, with short 
@@ -172,28 +166,26 @@ measurement campaigns improving predictions at new locations~\citep{Kaiser_Klein
 downstream safety analyses without modeling exposure~\citep{kaiser2025spatiotemporalgraphneuralnetwork}. At the network level, studies define risk as crashes per unit exposure on links and 
 address practical issues such as spatial snapping of crashes, allocating events near intersections, and integrating safety metrics into routing under convenience constraints~\citep{isprs-archives-XLIII-B4-2022-427-2022}. 
 Intersection safety is critical: case analyses document strong crash concentrations at junctions and stress controlling for exposure when comparing infrastructure types or locations~\citep{futuretransp1030037}. 
-Building on exposure-normalized analysis~\citep{Uijtdewilligen01092024}, the availability of measured bicycle volumes~\citep{Kaiser_Klein_Kaack_2025,kaiser2025spatiotemporalgraphneuralnetwork}, 
-and advances in safety-aware routing~\citep{isprs-archives-XLIII-B4-2022-427-2022}, we estimate exposure-adjusted crash risk for Berlin at street-segment and junction levels, enable context-conditional
-risk analysis, and integrate network-level risk into routing decisions.
+We estimate exposure-adjusted crash risk for Berlin at street-segment and junction levels, enable context-conditional risk analysis, and integrate network-level risk into routing decisions.
 
-\section{Data and Methods}\label{sec:data_and_methods}
+The paper is organized as follows: we present our data in \cref{sec:data}, describe our methods in \cref{sec:methods}, report the results in \cref{sec:results}, and conclude in \cref{sec:conclusion}.
+
+\section{Data}\label{sec:data}
 % In this section, describe \emph{what you did}. Roughly speaking, explain what data you worked with, how or from where it was collected, it's structure and size. Explain your analysis, and any specific choices you made in it. Depending on the nature of your project, you may focus more or less on certain aspects. If you collected data yourself, explain the collection process in detail. If you downloaded data from the net, show an exploratory analysis that builds intuition for the data, and shows that you know the data well. If you are doing a custom analysis, explain how it works and why it is the right choice. If you are using a standard tool, it may still help to briefly outline it. Cite relevant works. You can use the \verb|\citep| and \verb|\citet| commands for this purpose \citep{mackay2003information}.
-
-\subsection{Data}\label{sec:data}
 We combine police-recorded bicycle crashes with measured cyclist exposure for the city of Berlin. Crash data are drawn from the Berlin subset of the German \emph{Unfallatlas}~\citep{Unfallatlas2025} 
 and filtered for bicycle-related incidents. Exposure comes from a city-wide dataset of measured bicycle volumes aggregated at the street-segment level~\citep{kaiser2025spatiotemporalgraphneuralnetwork}. 
 The street network is represented as polyline segments with associated monthly cyclist counts. The resulting dataset spans 2019--2023 and covers 4{,}958 street segments and 2{,}924 junctions, 
 with 33{,}181 recorded bicycle crashes. At monthly resolution the data are sparse: in a typical month fewer than 5\% of segments and about 3\% of junctions record at least one crash, and 
-some periods include segments with zero measured exposure. This sparsity motivates the exposure-normalized risk estimation and small-count stabilization described in Section~\ref{sec:methods}.
+some periods include segments with zero measured exposure. This sparsity motivates the exposure-normalized risk estimation and small-count stabilization described in \cref{sec:methods}.
 
-\paragraph{Preprocessing.}\todo{adjust or drop sentence regarding segments with zero measured exposure} 
+\paragraph{Preprocessing.}
 To enable network-scale analysis, all layers are harmonized to a common street-network topology and a projected coordinate reference system. Crash locations are matched to segments using 
 nearest-segment assignment. To capture the concentration of crashes at intersections, we identify junctions as nodes where at least three segments meet; crashes within a fixed radius are 
-assigned to the nearest junction, and junction exposure is computed from the exposures of incident segments. Matched crashes and exposures are aggregated to monthly resolution. During 
-aggregation, segments and months with zero measured exposure are identified. To obtain more stable risk estimates, we apply an Empirical Bayes approach (outlined in Section~\ref{sec:methods}). 
-The resulting monthly panels at the segment and junction levels serve as inputs to all risk scoring and routing analyses.\footnote{Implementation details and hyperparameters at \url{https://github.com/ytobiaz/data_literacy}.}
+assigned to the nearest junction, and junction exposure is computed from the exposures of incident segments. Matched crashes and exposures are aggregated to monthly resolution, and segments 
+and months with zero exposure are identified and dropped. To obtain stable risk estimates under sparse observations, monthly aggregates are pooled to yearly totals and an Empirical Bayes 
+approach is applied as described in \cref{sec:methods}. The resulting yearly segment- and junction-level risk estimates serve as inputs to all routing analyses.
 
-\subsection{Methods}\label{sec:methods}
+\section{Methods}\label{sec:methods}
 \paragraph{Empirical Bayes relative risk.}
 For each street segment $s$ and month $t$, let $A_{s,t}$ denote the number of police-recorded bicycle crashes and $E_{s,t}$ the measured cyclist exposure. We assume that, within a given month, crash incidence is proportional to exposure under a ``no special risk'' baseline, yielding the expected number of crashes
 \[
@@ -236,7 +228,7 @@ To capture the concentration of crashes near intersections, we also estimate jun
 \label{eq:half-sum}
 E_{v,y}=\tfrac{1}{2}\sum_{s\in\mathcal{I}(v)}E_{s,y},
 \end{equation}
-which avoids double-counting. While this specific halving correction is not standard, aggregating exposure over incident links is common when turning movements are unavailable~\citep{hakkert2002uses,WANG2020105838}. The expected number of junction crashes is defined as $\widehat{A}_{v,y}=A_y E_{v,y}/E_y$, and junction relative risk $r_{v,y}$ is estimated using the same Empirical Bayes formulation and hyperparameters as for segments. All risks are estimated independently by year.
+which avoids double-counting. Aggregating exposure over incident links is common when turning movements are unavailable~\citep{hakkert2002uses,WANG2020105838}. The expected number of junction crashes is defined as $\widehat{A}_{v,y}=A_y E_{v,y}/E_y$, and junction relative risk $r_{v,y}$ is estimated using the same Empirical Bayes formulation and hyperparameters as for segments. All risks are estimated independently by year.
 
 \paragraph{Routing graph.}
 For each year $y$, we build an undirected graph $G_y=(V_y,E_y)$ from the street network: nodes represent segment endpoints and edges represent street segments with length $\ell_e$. Each graph edge $e$ corresponds to a street segment $s$ and inherits its estimated yearly risk, denoted $r_{e,y}=r_{s,y}$. Junction identifiers and risks are mapped to nodes via spatial snapping in a projected coordinate system, yielding a year-specific, risk-annotated network.
@@ -295,8 +287,9 @@ Pairs with $R(P_{\text{dist}})=0$ are excluded from $\Delta_R$ due to an undefin
 \section{Results}\label{sec:results}
 % In this section outline your results. At this point, you are just stating the outcome of your analysis. You can highlight important aspects (``we observe a significantly higher value of $x$ over $y$''), but leave interpretation and opinion to the next section. This section absoultely \emph{must} include at least two figures.
 
-\section{Discussion \& Conclusion}\label{sec:conclusion}
+\section{Discussion and Conclusion}\label{sec:conclusion}
 % Use this section to briefly summarize the entire text. Highlight limitations and problems, but also make clear statements where they are possible and supported by the analysis. 
+We provide implementation details, hyperparameters, and supplementary material, available at \url{https://github.com/ytobiaz/data_literacy}.
 
 \newpage
 
